Updating grafical interface...

--- a/index.html
+++ b/index.html
@@ -9,35 +9,46 @@
 <body>
 
     <header>
-        <div>CABEÇALHO</div>
+        <div class="header_div">
+            <img class="header_logo" src="img/logo.png" alt="">
+            <li class="header_links">
+                <ol class="list_links">teste</ol>
+                <ol class="list_links">teste</ol>
+            </li>
+        </div>
     </header>
+    <div class="line_red"></div>
 
     <h1>Cadastro de aluno</h1>
 
     <form action="" id="form">
     <div class="form_infos">
-        <label class="form_title" for="">username:</label>
-        <input class="form_input" type="text" placeholder="nome do aluno">
+        <label class="form_title" for="">nome:</label>
+        <input class="form_input" type="text" placeholder=" nome do aluno">
     </div>
     <div class="form_infos">
         <label class="form_title" for="">nascimento:</label>
-        <input class="form_input" type="text" placeholder="data de nascimento">
+        <input class="form_input" type="text" placeholder=" data de nascimento">
     </div>
     <div class="form_infos">
         <label class="form_title" for="">email:</label>
-        <input class="form_input" type="text" placeholder="e-mail do aluno">
+        <input class="form_input" type="text" placeholder=" e-mail do aluno">
     </div>
     <div class="form_infos">
         <label class="form_title" for="">fone:</label>
-        <input class="form_input" type="text" placeholder="telefone de contato">
+        <input class="form_input" type="text" placeholder=" telefone de contato">
+    </div>
+    <div class="form_infos">
+        <label class="form_title" for="">username:</label>
+        <input class="form_input" type="text" placeholder=" username do aluno">
     </div>
     <div class="form_infos">
         <label class="form_title" for="">senha:</label>
-        <input class="form_input" type="text" placeholder="digite a senha...">
+        <input class="form_input" type="text" placeholder=" digite a senha...">
     </div>
     <div class="form_infos">
         <label class="form_title" for="">senha:</label>
-        <input class="form_input" type="text" placeholder="digite a senha novamente...">
+        <input class="form_input" type="text" placeholder=" digite a senha novamente...">
     </div>
     <div class="form_infos">
         <label class="form_title" for="">foto:</label>
