--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="header_div">
             <img class="header_logo" src="img/logo.png" alt="">
             <li class="header_links">
-                <ol class="list_links">teste</ol>
-                <ol class="list_links">teste</ol>
+                <ol class="list_links"><a href="index.html">Cadastro</a></ol>
+                <ol class="list_links"><a href="consulta.html">Consulta</a></ol>
             </li>
         </div>
     </header>
@@ -29,15 +29,15 @@
     </div>
     <div class="form_infos">
         <label class="form_title" for="">nascimento:</label>
-        <input class="form_input" id="nascimento" type="date" placeholder=" data de nascimento">
+        <input class="form_input form_date" id="nascimento" type="date" placeholder=" data de nascimento">
     </div>
     <div class="form_infos">
         <label class="form_title" for="">email:</label>
-        <input class="form_input" id="email" type="text" placeholder=" e-mail do aluno">
+        <input class="form_input" id="email" type="email" placeholder=" e-mail do aluno">
     </div>
     <div class="form_infos">
         <label class="form_title" for="">fone:</label>
-        <input class="form_input" id="fone" type="text" placeholder=" telefone de contato">
+        <input class="form_input" id="fone" type="number" placeholder=" telefone de contato">
     </div>
     <div class="form_infos">
         <label class="form_title" for="">username:</label>
@@ -53,7 +53,7 @@
     </div>
     <div class="form_infos">
         <label class="form_title" for="">foto:</label>
-        <input type="file">
+        <input type="file" id="foto" class="upload_file">
     </div>
 
     <button class="button" type="submit">Cadastrar</button>
